# e_commerce_project

./: .envrc  .firebaserc  .gitignore  README.md  circuit_breaker.py  firebase.json  firestore.rules  firestore_handler.py  idempotency_handler.py  processor.py  publisher.py  pyproject.toml  subscriber.py  topic_handler.py
functions/: main.py
